kubernetes/infrastructure/base/configs/envoy-gateway/sso-gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: sso-eg
spec:
  gatewayClassName: eg
  listeners:
    - name: http
      hostname: "*.home.parents-basement.win"
      protocol: HTTP
      port: 80
      allowedRoutes:
        namespaces:
          from: Same
    - name: https
      hostname: "*.home.parents-basement.win"
      protocol: HTTPS
      port: 443
      allowedRoutes:
        namespaces:
          from: All
      tls:
        mode: Terminate
        certificateRefs:
          - name: wildcard-tls-secret
