kubernetes/infrastructure/base/configs/envoy-gateway/http-redirect.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: http-to-https-redirect
  annotations:
    external-dns.alpha.kubernetes.io/controller: "exclude"
spec:
  parentRefs:
    - name: eg
      namespace: envoy-gateway-system
      sectionName: http
    - name: sso-eg
      namespace: envoy-gateway-system
      sectionName: http
  hostnames:
    - "*.home.parents-basement.win"
  rules:
    - filters:
        - type: RequestRedirect
          requestRedirect:
            scheme: https
            statusCode: 301
